# accel-VeriFi

invoice-dapp/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
invoice-dapp/src/: App.css  App.tsx  invoice_claim.json
invoice-dapp/src/components/Dashboard/: AdminDashboard.tsx  AuditQueue.tsx  InvoiceManagement.tsx  PaymentQueue.tsx  SetupPage.tsx  UploadInvoice.tsx  UserHomepage.tsx  VendorManagement.tsx
invoice-dapp/src/components/Invoices/: InvoiceUpload.tsx
invoice-dapp/src/components/Layout/: WalletButton.tsx
invoice-dapp/src/lib/hooks/: useProgram.tsx
invoice-oracle-backend/: .env.example  Cargo.toml
invoice-oracle-backend/src/: cranker.rs  escrow.rs  main.rs  payment_queue.rs
oracle-test-client/: Anchor.toml  package-lock.json  package.json
oracle-test-client/litesvm-tests/: org.ts  setup.ts  vendor.ts
oracle-test-client/programs/invoice-claim/: Cargo.toml
oracle-test-client/programs/invoice-claim/src/: lib.rs  state.rs
oracle-test-client/programs/invoice-claim/src/instructions/: close.rs  escrow.rs  invoice.rs  mod.rs  org.rs  payment_queue.rs  payments.rs  (+2 more)
oracle-test-client/scripts/: approve_audit.ts  bootstrap.ts  check_seeds.ts  debug_request_pda.ts  fund_escrow.ts  init_payment_queue.ts  request_vrf.ts  settle_vendor.ts  status.ts  submit_request.ts  update_org_config.ts  update_org_mint.ts  vendor_balance.ts  verify_invoice_pda.ts  view_invoices.ts  wallet_export.ts
oracle-test-client/tests/: invoice-claim.ts  invoice-e2e-live-vrf.ts  invoice-flow-test.ts  org-test.ts  vendor-test.ts
(+1 files in other folders)
