[package]
name = "invoice-oracle-backend"
version = "0.1.0"
edition = "2021" # switch back — Rust 2024 isn’t stable yet

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
dotenvy = "0.15.7"
sha2 = "0.10"
base64 = "0.21.7"

# --- Solana stack ---
solana-sdk = "1.18.2"
solana-client = "1.18.2"
solana-account-decoder = "1.18.2"
solana-transaction-status = "1.18.2"


# --- SPL crates aligned with Solana 1.18 ---
spl-token-2022 = "=1.0.0"
spl-associated-token-account = "=2.3.0"
spl-memo = "=4.0.0"
